--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=8081
+PORT=8080
 # app hostname
 HOST_NAME=localhost
 
@@ -7,4 +7,4 @@ DB_HOST_WITH_DRIVER=mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT=3307
 DB_USER=root
 DB_PASSWORD=123456
-DB_NAME=haohoang
+DB_NAME=quiz-by-haohoang
