--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Hao Hoang",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "2.0.20"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "mongoose": "6.7.2",
+    "mongoose-delete": "0.5.4"
   }
 }
