--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "api-query-params": "5.4.0",
+    "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-fileupload": "1.4.0",
     "mongoose": "6.7.2",
     "mongoose-delete": "0.5.4"
   }
