--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "express-fileupload": "1.4.0",
+    "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "mongoose": "6.7.2",
     "mongoose-delete": "0.5.4"
