--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@ PORT=8080
 # app hostname
 HOST_NAME=localhost
 
+JWT_SECRET=haohoang
+JWT_EXPIRES_IN=2h
+
 DB_HOST=mongodb://localhost:27018
 DB_HOST_WITH_DRIVER=mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT=3307
