--- a/.env
+++ b/.env
@@ -1,13 +1,21 @@
 PORT=8080
+NODE_ENV=development
 # app hostname
 HOST_NAME=localhost
 
 JWT_SECRET=haohoang
 JWT_EXPIRES_IN=2h
 
-DB_HOST=mongodb://localhost:27018
+# DB_HOST=mongodb://localhost:27018
+# DB_HOST_WITH_DRIVER=mongodb://root:123456@localhost:27018/?authSource=admin
+# DB_PORT=3307
+# DB_USER=root
+# DB_PASSWORD=123456
+# DB_NAME=quiz-by-haohoang
+
+DB_HOST=mongodb+srv://root:GoMgmY0dETrFdiR3@cluster0.czbl3wq.mongodb.net/?retryWrites=true&w=majority
 DB_HOST_WITH_DRIVER=mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT=3307
 DB_USER=root
-DB_PASSWORD=123456
+DB_PASSWORD=GoMgmY0dETrFdiR3
 DB_NAME=quiz-by-haohoang
